--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,9 @@ header {
 }
 
 h1,
-legend {
+legend,
+h2,
+button {
   font-family: 'Staatliches', sans-serif;
 }
 
@@ -48,35 +50,42 @@ p {
 
 form {
   max-width: 750px;
-  margin: 0 auto;
+  margin: 0 auto 250px;
 }
 
 fieldset {
   display: flex;
   flex-direction: column;
   border: none;
-  color: #FFFFFF;
+  color: #4E4958;
   padding: 0;
-
 }
 
-fieldset legend {
+fieldset #title {
   padding: 50px 275px;
   border-radius: 20px 20px 0px 0px;
   background-color: #F67669;
+  color: #FFF;
   font-size: 24px;
   line-height: 34px;
+  margin: 0;
+  font-weight: normal;
 }
 
 .input-box {
- background-color: #FFF;
- padding: 30px 55px;
-}
-
-.input-group .input-wrapper {
   display: flex;
   flex-direction: column;
-  color: #4E4958;
+  gap: 19px;
+  background-color: #FFF;
+  padding: 30px 55px 60px;
+  border-radius: 0px 0px 20px 20px;
+}
+
+.input-wrapper {
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+  gap: 8px;
 }
 
 .input-group {
@@ -84,15 +93,118 @@ fieldset legend {
   gap: 22px;
 }
 
-.input-group .input-wrapper label {
+.input-wrapper label {
   font-size: 14px;
   line-height: 24px;
 }
 
-.input-group .input-wrapper input {
+.input-wrapper input,
+select,
+textarea {
   border-radius: 8px;
   width: 300px;
   height: 56px;
   border: 1px solid var(--back-lines-in-white, #E6E6F0);
   background: var(--shapes-02, #FAFAFC);
+  appearance: none;
+  resize: none;
+}
+
+.input-wrapper #email {
+  width: 100%;
+}
+
+.input-wrapper span {
+  color: #C1BCCC;
+  margin-left: 9px;
+  font-size: 12px;
+}
+
+fieldset legend {
+  color: #253B51;
+  font-size: 24px;
+  line-height: 34px;
+  border-bottom: 1px solid #E6E6F0;
+  margin: 24px 0 32px;
+  padding-bottom: 8px;
+  text-align: center;
+}
+
+.input-wrapper textarea {
+  width: 610px;
+  height: 167px;
+}
+
+.input-checkbox {
+  display: flex;
+  align-items: center;
+  margin-top: 12px;
+  gap: 2px;
+}
+
+.input-checkbox {
+  position: relative;
+}
+
+.input-checkbox input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 24px;
+  height: 24px;
+  border-radius: 8px;
+  opacity: 0;
+}
+
+.input-checkbox label {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  gap: 12px;
+}
+
+.input-checkbox label::before {
+  content: "";
+  width: 24px;
+  height: 24px;
+  display: block;
+  border: 1px solid var(--back-lines-in-white, #E6E6F0);
+  background: var(--shapes-02, #FAFAFC);
+  border-radius: 8px;
+}
+
+.input-checkbox input:checked+label::before {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='22.903' height='19.395'%3E%3Cpath d='M22.903 2.828 20.075 0 6.641 13.435 3.102 9.09 0 11.616l6.338 7.779L22.903 2.828z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+}
+
+.input-checkbox input:focus+label::before {
+  outline: 2px solid black;
+}
+
+.input-date {
+  display: flex;
+  align-items: center;
+  gap: 32px;
+}
+
+.input-time {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.input-time input {
+  width: 140px;
+}
+
+button {
+  padding: 15px 40px;
+  border-radius: 8px;
+  background-color: #F67669;
+  font-size: 20px;
+  line-height: 26px;
+  color: #FFF;
+  border: none;
+  margin-top: 38px;
 }
